<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dig1"
            android:textSize="20dp"
            android:inputType="phone"
            android:id="@+id/edig1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dig2"
            android:textSize="20dp"
            android:inputType="phone"
            android:id="@+id/edig2"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suma"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resta"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_divi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divi"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <Button
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/calcul"
            android:textSize="20dp"
            android:id="@+id/ecalcul"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textSize="20sp"
            android:id="@+id/tresultado"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.15" />
    </LinearLayout>
</LinearLayout>
